src/objects/GitHub_Link__c.object
<CustomObject>
    <fields>
        <fullName>GitHub_Type__c</fullName>
        <label>GitHub Type</label>
        <picklist>
            <picklistValues>
                <fullName>Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pull Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GitHub_Unique_Id__c</fullName>
        <inlineHelpText>The composite Id of the record defined in GithubToAgileAccelerator.getUniqueId() - originally &lt;repository_name&gt;_&lt;github_record_type&gt;_&lt;github_record_id&gt;</inlineHelpText>
        <label>GitHub Unique Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Github_URL__c</fullName>
        <inlineHelpText>The link to the linked record on Github.</inlineHelpText>
        <label>Github URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>JSON__c</fullName>
        <label>JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Work__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Work record in Agile Accelerator.</inlineHelpText>
        <label>Work</label>
        <referenceTo>agf__ADM_Work__c</referenceTo>
        <relationshipLabel>GitHub Links</relationshipLabel>
        <relationshipName>GitHub_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>GitHub Link</label>
    <nameField>
        <displayFormat>Git-{0000000}</displayFormat>
        <label>GitHub Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GitHub Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>